# BSE-Consensus

./: .gitattributes  .gitignore  BSE Consensus, Implementation.ipynb  Cargo.toml  README.md
legacy/: BSE Consensus, Results.ipynb  BSE.py
src/: agents.rs  cli.rs  crypto.rs  lib.rs  pouw.rs  rng.rs
src/market/: book.rs  mod.rs  session.rs
tests/: cli.rs
