[package]
name = "bse-consensus"
version = "1.0.0"
edition = "2021"
description = "Proof-of-Useful-Work consensus: deterministic market-simulation mining with cheap, sound verification."
license = "MIT"

[[bin]]
name = "bse-consensus"
path = "src/bin/bse-consensus.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
blake3 = "=1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "=4.2.7", features = ["derive"] }
